# Climate_Risk_Forecasting_Agent_CREW_AI

./: README.md  pyproject.toml
output/: final_climate_risk_report.md  research_findings.md
src/climate_forecasting/: crew.py  main.py
src/climate_forecasting/config/: agents.yaml  tasks.yaml
