[project]
name = "climate_forecasting"
version = "0.1.0"
description = "climate_forecasting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.1.0"
]

[project.scripts]
climate_forecasting = "climate_forecasting.main:run"
run_crew = "climate_forecasting.main:run"
train = "climate_forecasting.main:train"
replay = "climate_forecasting.main:replay"
test = "climate_forecasting.main:test"
run_with_trigger = "climate_forecasting.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
